<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".CreateNew">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/del_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTitle">

        <LinearLayout
            android:id="@+id/nested_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/multiline_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:ems="10"
                android:fontFamily="@font/advent_pro"
                android:gravity="start|top"
                android:inputType="textMultiLine|textNoSuggestions"
                android:textSize="30sp" />
        </LinearLayout>
    </ScrollView>

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@color/colorPrimaryDark"
        android:ems="10"
        android:fontFamily="@font/advent_pro"
        android:gravity="center"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorPrimaryText"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/done_btn"
        android:layout_width="64dp"
        android:layout_height="34dp"
        android:layout_marginTop="4dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/advent_pro"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryText"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/d_chord_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/advent_pro"
        android:text="@string/d"
        android:textColor="@color/colorPrimaryText"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/e_chord_btn"
        app:layout_constraintEnd_toStartOf="@+id/e_chord_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/c_chord_btn" />

    <Button
        android:id="@+id/a_chord_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/advent_pro"
        android:text="@string/a"
        android:textColor="@color/colorPrimaryText"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/b_chord_btn"
        app:layout_constraintEnd_toStartOf="@+id/b_chord_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/c_chord_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/advent_pro"
        android:text="@string/c"
        android:textColor="@color/colorPrimaryText"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/d_chord_btn"
        app:layout_constraintEnd_toStartOf="@+id/d_chord_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/b_chord_btn" />

    <Button
        android:id="@+id/b_chord_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/advent_pro"
        android:text="@string/b"
        android:textColor="@color/colorPrimaryText"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/c_chord_btn"
        app:layout_constraintEnd_toStartOf="@+id/c_chord_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/a_chord_btn" />

    <Button
        android:id="@+id/e_chord_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/advent_pro"
        android:text="@string/e"
        android:textColor="@color/colorPrimaryText"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/f_chord_btn"
        app:layout_constraintEnd_toStartOf="@+id/f_chord_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/d_chord_btn" />

    <Button
        android:id="@+id/f_chord_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/advent_pro"
        android:text="@string/f"
        android:textColor="@color/colorPrimaryText"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/g_chord_btn"
        app:layout_constraintEnd_toStartOf="@+id/g_chord_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/e_chord_btn" />

    <Button
        android:id="@+id/g_chord_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/advent_pro"
        android:text="@string/g"
        android:textColor="@color/colorPrimaryText"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/f_chord_btn" />

    <Button
        android:id="@+id/flat_btn"
        android:layout_width="103dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/advent_pro"
        android:text="@string/flat"
        android:textColor="@color/colorPrimaryText"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/sharp_btn"
        app:layout_constraintEnd_toStartOf="@+id/minor_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sharp_btn" />

    <Button
        android:id="@+id/sharp_btn"
        android:layout_width="103dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/advent_pro"
        android:text="@string/sharp"
        android:textColor="@color/colorPrimaryText"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/a_chord_btn"
        app:layout_constraintEnd_toStartOf="@+id/flat_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/next_bar_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/advent_pro"
        android:text="@string/bar"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryText"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/flat_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/del_btn" />

    <Button
        android:id="@+id/del_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/advent_pro"
        android:text="@string/del"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryText"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/sharp_btn"
        app:layout_constraintEnd_toStartOf="@+id/next_bar_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/section_btn" />

    <Button
        android:id="@+id/section_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/advent_pro"
        android:text="@string/sec"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryText"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/sharp_btn"
        app:layout_constraintEnd_toStartOf="@+id/del_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/seven_btn"
        android:layout_width="103dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/advent_pro"
        android:text="@string/seven"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryText"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/minor_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/minor_btn" />

    <Button
        android:id="@+id/minor_btn"
        android:layout_width="103dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/advent_pro"
        android:text="@string/minor"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryText"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/flat_btn"
        app:layout_constraintEnd_toStartOf="@+id/seven_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/flat_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>