<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".fragments.MainFragment">

    <Button
        android:id="@+id/settings_btn"
        android:layout_width="317dp"
        android:layout_height="58dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/advent_pro"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="#515151"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notes_btn" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="311dp"
        android:layout_height="186dp"
        android:fontFamily="@font/advent_pro"
        android:gravity="center"
        android:shadowColor="#000000"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/chord_notepad"
        android:textColor="#B7B7B7"
        android:textSize="75sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002" />

    <Button
        android:id="@+id/create_btn"
        android:layout_width="317dp"
        android:layout_height="58dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/advent_pro"
        android:text="@string/create_new"
        android:textAllCaps="false"
        android:textColor="#515151"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/notes_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/notes_btn"
        android:layout_width="317dp"
        android:layout_height="58dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/advent_pro"
        android:text="@string/my_notes"
        android:textAllCaps="false"
        android:textColor="#515151"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/settings_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>